--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -110,7 +110,8 @@ jhipster:
     rate-limiting:
       enabled: false
     authorized-microservices-endpoints: # Access Control Policy, if left empty for a route, all endpoints will be accessible
-      app1: /api # recommended prod configuration
+      rental: /api # recommended prod configuration
+      book: /api
   http:
     cache: # Used by the CachingHttpHeadersFilter
       timeToLiveInDays: 1461
