--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "file-loader": "5.0.2",
     "fork-ts-checker-webpack-plugin": "3.1.1",
     "friendly-errors-webpack-plugin": "1.7.0",
-    "generator-jhipster": "6.8.0",
+    "generator-jhipster": "^6.8.0",
     "html-webpack-plugin": "3.2.0",
     "husky": "3.1.0",
     "identity-obj-proxy": "3.0.0",
