--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,5 +1,6 @@
 #H2 Server Properties
+#Mon Nov 02 14:03:17 KST 2020
 0=JHipster H2 (Memory)|org.h2.Driver|jdbc\:h2\:mem\:gateway|gateway
+webSSL=false
 webAllowOthers=true
 webPort=8082
-webSSL=false
